<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_members"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackAlpha"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hp.pocket_docket.activity.RegisterMembersActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="PERSONAL DETAILS"
            android:textColor="@color/colorRed"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorGrey"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtRegisterFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/hintFirstName"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edtRegisterLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/hintLastName"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorGrey"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="ID"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edtRegisterID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:background="@android:color/transparent"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:text="Gender"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spinRegisterGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/gender"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorGrey"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Designation"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spinRegisterDesig"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/designation" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorGrey"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtRegisterDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawableEnd="@mipmap/calender"
                android:gravity="center_vertical"
                android:hint="@string/hintBirthDate"
                android:inputType="date"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorGrey"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtRegisterContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hintContact"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorGrey"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtRegisterMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hintEmailid"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorWhiteAlpha" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="LOGIN DETAILS"
            android:textColor="@color/colorRed"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorGrey"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtRegisterUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hintNewUserName"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorGrey"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtRegisterPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hintPassword"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorGrey"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtRegisterPass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hintReenter"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="REGISTER"
            android:textColor="@color/colorRed"
            android:textSize="15sp" />


    </LinearLayout>

</ScrollView>
