<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_module"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hp.pocket_docket.activity.AddModuleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorBack"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/proView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Project: "
                android:textColor="@color/colorText"
                android:textSize="15sp"
                android:typeface="serif" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorBack"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <EditText
                android:id="@+id/addModuleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hintModuleTitle"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorBack"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">


            <EditText
                android:id="@+id/addModuleDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hintDescrpition"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorBack"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">


            <TextView
                android:id="@+id/addModuleStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawableEnd="@mipmap/calender"
                android:drawableTint="@color/colorHead"
                android:hint="@string/hintStart"
                android:inputType="date"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                android:typeface="serif" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorBack"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/addModuleEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawableEnd="@mipmap/calender"
                android:drawableTint="@color/colorHead"
                android:hint="@string/hintComplete"
                android:inputType="date"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                android:typeface="serif" />
        </LinearLayout>


        <Button
            android:id="@+id/btnAddModule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="ADD MODULE"
            android:textColor="@color/colorHead"
            android:textSize="20sp"
            android:typeface="serif" />

    </LinearLayout>

</ScrollView>
